--- a/index.css
+++ b/index.css
@@ -1,15 +1,100 @@
+
+
+* {
+font-family: monospace;
+}
+
 body {
-  background: linear-gradient(0.25turn, #5ab0d4, #d5cae7, #f6a06f);
-  }
+background: linear-gradient(0.25turn, #5ab0d4, #d5cae7, #f6a06f);
+}
+
+h1 {
+color: #a80b9b;
+margin-top: 50px;
+}
+
+
+form {
+margin-top: 20px;
+background-color: #fff;
+box-shadow: -3px 6px 4px #222;
+}
+
+form input {
+width: 250px;
+height: 50px;
+border: none;
+outline: none;
+padding: 0 35px;
+}
+
+form button {
+width: 50px;
+height: 50px;
+color: #fff;
+background-color: #5ab0d4;
+outline: none;
+cursor: pointer;
+}
+
+h2 {
+margin-top: 30px;
+margin-bottom: 25px;
+}
+
+.addedToDo {
+margin-top: 10px;
+margin-bottom: 10px;
+}
+
+.addedToDo ul {
+list-style: none;
+width: 400px;
+
+}
+.addedToDo ul li {
+width: 100%;
+background: #fff;
+height: 30px;
+line-height: 30px;
+padding: 0 5px;
+position: relative;
+cursor: pointer;
+display: block;
+margin: 5px 0;
+box-shadow: -3px 4px 2px #222;
+transition: 0.5s linear;
+}
+
+.addedToDo ul li span {
+position: absolute;
+top: 0;
+right: 0;
+width: 40px;
+text-align: center;
+background: red;
+
+
+}
+.addingToDo {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
 
 
 
+.existingToDo {
+margin-top: 100px;
+font-size: larger;
+}
 
+.CurrentToDo li {
+margin-bottom: 12px;
+}
 
-
-  .Completed + p {
-    /* Styles for the <p> element immediately following an input with class 'Completed' */
-    margin-left: 0px;
-    margin-right: 100px;
-    display: inline;
-  }
+.Completed + p {
+margin-left: 0px;
+margin-right: 50px;
+display: inline;
+}
